--- a/Manifest.yml
+++ b/Manifest.yml
@@ -1,8 +1,5 @@
 ---
 applications:
-
--name:AyA
-
-memory:64(I)
-
-buildpack:https://github.com/cloudfoundry/staticfile-buildpack.git
+- nombre:  AyA
+memory:  64(I)
+buildpack:  https://github.com/cloudfoundry/staticfile-buildpack.git
